# myai

./: .gitignore  CHANGELOG.md  README.md  install.sh  main.py  pyproject.toml
docs/: DESIGN.md  ROADMAP.md
myai/: __main__.py  cli.py  global_config.py  paths.py
myai/agentsync/: __init__.py  config.py  master.py  registry.py  render.py  sync.py
myai/commands/: __init__.py  build.py  check.py  config.py  init_agent.py  master.py  sandbox.py  status.py  sync.py
myai/sandbox/: __init__.py  config.py  doctor.py  gondolin.py  progress.py  provision.py  pty.py  session.py  sidecar_install.py  vm_spec.py
myai/sandbox/image/: README.md
myai/sandbox/sidecar/: package.json  sidecar.mjs  sidecar.test.mjs
tests/: test_agentsync_render.py  test_sandbox.py  test_sandbox_integration.py  test_sidecar_install.py
